--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html
 
   body
     nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
-        a.navbar-brand(href='#') Bahay Pag-aasa Youth Center
+        a.navbar-brand(href='/') Bahay Pag-aasa Youth Center
         button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
           span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
