--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,11 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/css/style.css')
-    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css", integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb", crossorigin="anonymous")
-    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js",integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN",crossorigin="anonymous")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js", integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh",crossorigin="anonymous")
-    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js", integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ", crossorigin="anonymous")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js")
+    link(rel="stylesheet", href="/css/bootstrap.min.css")
+    script(src="/js/jquery-3.2.1.slim.min.js")
+    script(src="/js/popper.min.js")
+    script(src="/js/bootstrap.min.js")
 
   body
     nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
@@ -16,6 +15,15 @@ html
           span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.mr-auto
+            if is_logged_in 
+              li.nav-item
+                a.nav-link(href="/") Residents
+              li.nav-item
+                a.nav-link(href="/reports/cases") Per Case
+              li.nav-item
+                a.nav-link(href="/reports/cities") Per City
+              li.nav-item
+                a.nav-link(href="/reports/referring-party") Per Referring Party
 
         if is_logged_in
           form.form-inline
